更新文章；增加图片；修改页脚

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Allen Kashiwa Blog
 subtitle: 踏歌长行，梦想永在。
 welcome_message: 唯佳人与游戏不可辜负
 description: 专注游戏开发与设计
-creator: <a href="http://onev.cat">@onevcat</a>
+creator: <a href="http://baizihan.me">@baizihan</a>
 
 url: "http://www.baizihan.me"
 
