--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic
 title: Allen Kashiwa Blog
-subtitle: 踏歌长行，梦想永在。
+subtitle: 羁旅红尘不曾醉，笑歌年少且长长行。
 welcome_message: 唯佳人与游戏不可辜负
 description: 专注游戏开发与设计
 creator: <a href="http://baizihan.me">@baizihan</a>
