--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ title: Allen Kashiwa Blog
 subtitle: 羁旅红尘不曾醉，笑歌年少且长行。
 welcome_message: 唯佳人与游戏不可辜负
 description: 专注游戏开发与设计
-creator: <a href="http://baizihan.me">@baizihan</a>
+creator: <a href="http://baizihan.com">@baizihan</a>
 
-url: "http://www.baizihan.me"
+url: "http://www.baizihan.com"
 
 permalink: /:year/:month/:title/
 
