--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ creator: <a href="http://baizihan.com">@baizihan</a>
 
 url: "http://www.baizihan.com"
 
-# permalink: /:year/:month/:title/
+permalink: /:year/:month/:title/
 
 # Format
 highlighter: rouge
